/*
 * $Id: ChangeLog,v 1.567 2009-01-20 21:07:23 declan2005 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-01-20 16:06 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_grid.prg
    ! fixed little problem.

2009-01-18 22:47 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_grid.prg
    ! Simplified TGrid:AppendItem() method.

2009-01-06 22:29 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_browse.prg
    ! Fixed typos from previous commit.
  * include/i_media.ch
    ! Fixed preprocessor commands.
  * source/c_msgbox.c
  * source/h_msgbox.prg
    + MsgYesNoCancel() function added.

2009-01-01 19:55 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/winprint.prg
    ! Prevents some GPF traps.

2008-12-31 17:03 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_browse.prg
    ! Fixed record update on ::Delete() method when BROWSESYNC is ON.
  * include/i_windefs.ch
  * source/h_form.prg
    + ::NotifyIconDblClick, ::NotifyIconRDblClick, ::NotifyIconMidClick
      and ::NotifyIconMDblClick properties added (left, right and middle
      buttons' double click functionality).

2008-12-10 22:51 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  + samples/oohg/recordmerge.prg
    + Multiple databases on a single XBROWSE sample.

2008-12-10 19:56 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_datepicker.prg
    ! Assigns date to "empty" when CTOD("") is assigned to value.
  * source/h_browse.prg
    ! Fixed return value for ::DbSkip() method.

2008-12-03 21:43 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_error.prg
    * changed version.

2008-12-01 16:43 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_tooltip.prg
   ! Fixed compilation for MinGW.


2008-11-30 10:33 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_datepicker.prg